--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,6 @@
-[egg_info]
-tag_build = dev
 [metadata]
 description-file = README.md
+license = MIT
+license_file = LICENSE
+platforms = any
+keywords = home, plugwise, stick, automation
